--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -41,7 +41,7 @@ h1 {
 }
 
 .paragrafos {
-    max-width: 250px;
+    /* max-width: 250px; */
     padding-top: 50px;
     padding-left: 10px;
 }
@@ -52,7 +52,7 @@ h1 {
     background-color: rgba(0, 0, 0, 0.308);
     color: white;
     margin-top: 10px;
-    max-width: 250px;
+    /* max-width: 250px; */
     margin-left: 10px;
 }
 
@@ -62,7 +62,7 @@ h1 {
     background-color: rgba(0, 0, 0, 0.308);
     color: white;
     margin-top: 10px;
-    max-width: 250px;
+    /* max-width: 250px; */
     margin-left: 10px;
 }
 
