--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -13,89 +13,61 @@
     padding: 0px;
 }
 
-body {
-    background-color: white;
-    font-family: var(--font-poema);
-    font-weight: lighter;
-    font-size: 1.5em
+html, body {
+    min-height: 100vh;
+    background-color: ;
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top:50px;
+    font-variant: small-caps;
+}
+
+header > p {
+    padding-bottom: 50px;
 }
 
 a {
-    font-family: var(--font-padrao);
-    font-size: 0.8em;
+    color: white;
     text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 20px;
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgba(0, 0, 0, 0.555);
     color: white;
 }
-header {
-    text-align: center;
-    min-height: 150px;
-    min-width: 150px;
-    color: white;
-    background-color: black;
-}
 
-h1 {
-    font-family: var(--font-title);
-    padding-top: 30px;
-    font-size: 3em;
-}
-
-.paragrafos {
-    /* max-width: 250px; */
-    padding-top: 50px;
-    padding-left: 10px;
-}
-
-#paragrafo-img1 {
-    position: absolute;
-    top: 14%;
-    background-color: rgba(0, 0, 0, 0.308);
-    color: white;
-    margin-top: 10px;
-    /* max-width: 250px; */
-    margin-left: 10px;
-}
-
-#paragrafo-img2 {
-    position: absolute;
-    top: 14%;
-    background-color: rgba(0, 0, 0, 0.308);
-    color: white;
-    margin-top: 10px;
-    /* max-width: 250px; */
-    margin-left: 10px;
-}
-
-#div-img1 {
-    position: relative;
-    height: 500px;
-    width: auto;
-    background: green url('imagens/background001.jpg') center center no-repeat fixed;
-    background-size: cover;
-    margin-top: 30px;
-}
-
-#div-img2 {
-    position: relative;
-    height: 500px;
-    width: auto;
-    background: green url('imagens/background002.jpg') center center/ cover no-repeat fixed;
-    margin-top: 30px;
+section.imagem > p {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.377);
 }
 
 footer {
-    font-family: var(--font-padrao);
-    text-align: center;
-    font-size: 0.7em;
-    color: rgb(185, 185, 185);
     background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px;
 }
-
-footer > a {
-    font-size: 0.7em;
-}
-
-.links:hover {
-    color: gray;
-}
-
