--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -15,7 +15,8 @@
 
 html, body {
     min-height: 100vh;
-    background-color: ;
+    background-color: darkgray;
+    font-family: var(--font-padrao);
 }
 
 header {
@@ -27,19 +28,21 @@ header {
 header > h1 {
     padding-top:50px;
     font-variant: small-caps;
+    font-family: var(--font-title);
+    font-size: 10vw;
 }
 
 header > p {
     padding-bottom: 50px;
 }
 
-a {
+header a, footer a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
 }
 
-a:hover {
+header a:hover, footer a:hover {
     text-decoration: underline;
 }
 
@@ -48,6 +51,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 20px;
+    font-family: var(--font-poema);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -61,7 +66,7 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.377);
 }
 
