Finalizei o exercício mq004, Media Query

--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -2,3 +2,77 @@
 
 /* Todas as demais mídias */ 
 
+/* Typical Device Breakpoints 
+Pequenas telas: até 600px
+Celular: 600px até 768px
+Tablet: 769px até 992px
+Desktop: 993ppx até 1200px
+Grandes telas: acima de 1200px
+*/
+/* Eu não preciso configurar o media para pequenas telas(celular) porque meu site foi criado usando o método mobile first. */
+
+@media print { /* impressão */
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    body {
+        background-image: url(../imagens/back-print.jpg); /* desnecessário porque não é possivel impriir um background */
+        text-shadow: none;
+        color: black;
+    }
+
+    main {
+        width: 80vw;
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'Esse texto foi feito através do site www.digdindigdin.com';
+        text-decoration: overline;
+    }
+    h1 {
+        color: black;
+        text-shadow: none;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) { /* tablet */
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 993px) and (max-width: 1200px) { /* desktop */
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 1200px) { /* grandes telas */
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
+}
